--- a/config.json
+++ b/config.json
@@ -2,5 +2,6 @@
 	"database_username": "root",
 	"database_password": "8WJFYZDvR7fzGNZjRuFXx3tn6qj5gs",
 	"database_name": "shoppingwebsite",
-	"port": 8080
+	"port": 8078,
+	"app_secret": "BDySzQ41FZ(AhveWMoNsaI#riMgWOd39"
 }
